--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,28 @@
 	width: 600px;*/
 }
 
-h1 {
+h1, h2 {
 	font-family: sans-serif;
 	text-align: center;
 }
 
 body {
-	background-color: #E0ECF4;
+	background-color: white;
 }
+
+.page {
+	background-color: #E0ECF4;
+	width: 70%;
+	margin: auto;
+	padding: 70px;
+	padding-top: 35px;
+}
+
+.pure-g > div {
+	box-sizing: border-box;
+}
+.l-box {
+	padding: 1em;
+}
+
+
