--- a/css/styles.css
+++ b/css/styles.css
@@ -65,21 +65,21 @@ body {
 }
 
 .industrialLocation {
-	color: #e41a1c
+	color: #1170AA
 }
 
 .otherLocation {
-	color: #377eb8
+	color: #FC7D0B
 }
 
 .parkLocation {
-	color: #4daf4a
+	color: #A3ACB9
 }
 
 .residentialLocation {
-	color: #984ea3
+	color: #57606C
 }
 
 .streetLocation {
-	color: #ff7f00
+	color: #5FA2CE
 }
